--- a/SpringBootInstaller/Windows/WelcomeWindow.xaml
+++ b/SpringBootInstaller/Windows/WelcomeWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MyApp 설치 프로그램"
-        Width="600" Height="600"
+        Width="800" Height="600"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         Background="{StaticResource PrimaryBg}">
@@ -14,9 +14,10 @@
         </Grid.RowDefinitions>
 
         <!-- 메인 콘텐츠 -->
-        <Border Grid.Row="0" Background="{StaticResource CardBg}" Margin="20">
-            <StackPanel VerticalAlignment="Center" Margin="40">
-                <!-- 로고/제목 -->
+        <Border Grid.Row="0" Background="{StaticResource CardBg}" Margin="15">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <StackPanel Margin="30,25">
+                    <!-- 로고/제목 -->
                 <TextBlock Text="ACS 환경 셋팅 설치"
                            FontSize="28"
                            FontWeight="Bold"
@@ -50,7 +51,8 @@
                                Margin="0,5"/>
                 </StackPanel>
 
-            </StackPanel>
+                </StackPanel>
+            </ScrollViewer>
         </Border>
 
         <!-- 하단 버튼 -->
